# myco_chess_engine

./: Cargo.toml  build.rs  flamelens.sh
.cargo/: config.toml
benches/: perft.rs  piece.rs  search.rs  zobrist.rs
ml/: .gitignore  board_to_np_array.py  chess_eval_model.ptsd  fen_processing.py  main.py  model.py  position_data.py  read_pgn.py  requirements.txt  test_board_to_np_array.py  test_fen_to_cnn_input.py  training.ipynb  training.py
pgn_data/: CatalanOpen.pgn
src/: lib.rs  main.rs
src/bb_game/: bitboard.rs  board.rs  constants.rs  mod.rs  square.rs
src/cache/: eval.rs  mod.rs  moves.rs  vision.rs
src/cgame/: board.rs  castling_rights.rs  constants.rs  contextual_move.rs  engine.rs  eval.rs  game.rs  mod.rs  moves.rs  raycast.rs
src/database/: build.rs  connection.rs  mod.rs  retrieve.rs  schema.rs
src/engine/: minimax.rs  minmax.rs  minmax_ml.rs  mod.rs
src/eval/: bishops.rs  center.rs  development.rs  diagonals.rs  king_safety.rs  knights.rs  minimax.rs  mod.rs  mvvlva.rs  nn.rs  pawn_structure.rs  piece.rs  piece_tables.rs  rooks.rs  threats.rs
src/game/: board.rs  castling_rights.rs  cmove.rs  constants.rs  error.rs  eval.rs  game.rs  gen.rs  invalid_fen_error.rs  mod.rs  piece.rs  square.rs
src/hash/: random_hash_values.rs  zobrist.rs
src/magic/: hashmap.rs  masks.rs  mod.rs  raycast.rs  subsets.rs
src/ml/: mod.rs  model.rs  tensor.rs
src/movegen/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  rook.rs  simulate.rs
src/moves/: common.rs  contextual_move.rs  mod.rs  simple_move.rs
src/performance/: perft.rs
src/pgn/: mod.rs  (+2 more)
(+9 files in other folders)
