[package]
name = "rust_chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
bitflags = "2.6.0"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
smallvec = "1.13.2"
tch = "0.18.1"
