[package]
name = "myco_chess_engine"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.93"
arrayvec = "0.7.6"
bitflags = "2.6.0"
clap = { version = "4.5.23", features = ["derive"] }
nohash-hasher = "0.2.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tch = { version = "0.18.1", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perft"
path = "benches/perft.rs"
harness = false

[features]
pytorch = ["tch"]
